fixes for dark mode

--- a/atoms/default/client/css/_base.scss
+++ b/atoms/default/client/css/_base.scss
@@ -26,6 +26,10 @@ figure.element.element-image {
   figcaption {
     padding: 2px 0 12px;
     color: $text-main;
+    @media (prefers-color-scheme: dark) {
+      color: #f6f6f6;
+    }
+
     font-family: "Guardian Text Sans Web", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     font-size: 15px;
     line-height: 20px;
@@ -47,6 +51,10 @@ figure.element.element-image {
   }
   p, li, & {
     color: $text-main;
+    @media (prefers-color-scheme: dark) {
+      color: #f6f6f6;
+    }
+
     a, & > a, & > a > em {
       color: $text-second;
       border-bottom: 1px solid rgba($text-main, 0.25);
