--- a/atoms/default/client/css/_header.scss
+++ b/atoms/default/client/css/_header.scss
@@ -18,6 +18,7 @@
     z-index: 2;
     position: relative;
     transform: translateX(0.2em);
+    background-color: transparent !important;
 
     @include mq(tablet) {
       font-size: 42px;
@@ -56,6 +57,11 @@
     color: $text-main;
     padding: 20px 0 10px;
     position: relative;
+
+    @media (prefers-color-scheme: dark) {
+      color: #f6f6f6;
+    }
+
     .ios &,
     .android & {
       padding-left: 12px;
