--- a/atoms/default/client/css/_poem.scss
+++ b/atoms/default/client/css/_poem.scss
@@ -15,6 +15,11 @@
     rgba($text-main,0.25) 5px
   );
 
+  @media (prefers-color-scheme: dark) {
+    background: none;
+  }
+
+
   @include mq(mobileLandscape) {
     margin-left: -20px;
     margin-right: -20px;
@@ -157,6 +162,10 @@
       font-family: "Guardian Headline", "Guardian Egyptian Web", Georgia, serif;
       margin-bottom: 2em;
       color: $text-main;
+      @media (prefers-color-scheme: dark) {
+        color: #f6f6f6;
+      }
+
       @include mq(tablet) {
         font-size: 42px;
         line-height: 44px;
